fix(hot): align create and edit views

--- a/src/assignment/views/AssignmentPage.scss
+++ b/src/assignment/views/AssignmentPage.scss
@@ -14,4 +14,9 @@
 			z-index: 1000000; // Show datepicker over blue bar & zendesk
 		}
 	}
+
+	&__reorder-container {
+		display: flex;
+		justify-content: flex-end;
+	}
 }
